# claw

./: Cargo.toml  README.md  justfile
src/: api.rs  cli.rs  config.rs  daemon.rs  ipc.rs  lib.rs  main.rs  runtime.rs  store.rs  tools.rs  types.rs
src/providers/: codex.rs  fake.rs  mod.rs
src/transport/: mod.rs  unix.rs
